[tool.poetry]
name = "sms-sender"
version = "0.1.0"
description = "Application to fake send randomly generated messages"
authors = ["Alec Sherwood <aasherwood@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
